syntax="proto3";
package GatewayMessage;

message NewConnection
{
}
